tests/good/interpret/058-case-closure.clap
val x = 42
val f = case { y => x + y }
val z = f 0

